--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -65,6 +65,8 @@ flutter {
 }
 
 dependencies {
-
+  //  implementation platform('com.google.firebase:firebase-bom:31.2.2')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.google.firebase:firebase-auth'
+    implementation "androidx.browser:browser:1.5.0"
 }
