--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -65,8 +65,11 @@ flutter {
 }
 
 dependencies {
-  //  implementation platform('com.google.firebase:firebase-bom:31.2.2')
+ /*    implementation platform('com.google.firebase:firebase-bom:31.2.2') */
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.firebase:firebase-firestore'
     implementation "androidx.browser:browser:1.5.0"
+
 }
