--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   date_field: ^2.1.1
   intl: ^0.17.0
   image_picker: ^0.8.5+3
-
+  firebase_storage: ^8.0.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
