--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   intl: ^0.17.0
   image_picker: ^0.8.5+3
   firebase_storage: ^8.0.1
+  dio: ^4.0.0
 
   http: ^0.13.3
   # The following adds the Cupertino Icons font to your application.
